tests/test0147.ctr
'SINGLE_LANGUAGE'.
Pen write: 'aaa', brk.
{ ↲↲. } run.
Pen write: 'aaa', brk.
